Changes in build.gradle and pipeline options for flink runner