@@ -1,173 +1,140 @@
-/*
- * Copyright 2018 Google LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-buildscript {
-    ext {
-        dataflowBeamVersion = '2.46.0'
-    }
-    repositories {
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-        dependencies {
-            classpath "com.diffplug.spotless:spotless-plugin-gradle:6.15.0"
-            classpath "gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:2.6.0"
-        }
-    }
+plugins {
+    id 'java'
+    id 'application'
+    // shadow plugin to produce fat JARs
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'com.google.cloud.tools.jib'
-apply plugin: "com.diffplug.spotless"
-// Licence header enforced by spotless
-def javaLicenseHeader = """/*
- * Copyright 2020 Google LLC
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-"""
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-applicationDefaultJvmArgs = ['-Xms4g', '-Xmx16g']
-mainClassName = System.getProperty('mainClass', 'com.google.swarm.tokenization.DLPTextToBigQueryStreamingV2')
-jib {
-    from {
-        image = 'gcr.io/dataflow-templates-base/java8-template-launcher-base:latest'
-    }
-    container {
-        appRoot = '/template/df-dlp-inspect-template'
-        entrypoint = 'INHERIT'
-        environment = [DATAFLOW_JAVA_COMMAND_SPEC: '/template/df-dlp-inspect-template/resources/java_command_spec.json']
-
-    }
+ext {
+    javaVersion = '11.0'
+    flinkVersion = '1.17.1'
+    scalaBinaryVersion = '2.12'
+    slf4jVersion = '1.7.36'
+    log4jVersion = '2.17.1'
+    beamVersion = '2.47.0'
+    flinkVersionNew = flinkVersion.toString().replace("-SNAPSHOT", "") >= "1.17"
 }
-group 'com.google.swarm'
-version '0.1.0'
 
+// artifact properties
+group = 'com.google.swarm.tokenization'
+version = '0.1-SNAPSHOT'
+if (flinkVersionNew) {
+    mainClassName = 'com.google.swarm.tokenization.DLPTextToBigQueryStreamingV2'
+} else {
+    mainClassName = 'com.google.swarm.tokenization.DLPTextToBigQueryStreamingV2'
+}
+description = """Flink Quickstart Job"""
 
+sourceCompatibility = javaVersion
+targetCompatibility = javaVersion
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j2.properties", '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
+
+// declare where to find the dependencies of your project
 repositories {
     mavenCentral()
+    maven {
+        url "https://repository.apache.org/content/repositories/snapshots"
+        mavenContent(){
+            snapshotsOnly()
+        }
+    }
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
-dependencies {
-    implementation group: 'org.apache.beam', name: 'beam-sdks-java-core', version: dataflowBeamVersion
-    implementation(group: 'org.apache.beam', name: 'beam-runners-google-cloud-dataflow-java', version: dataflowBeamVersion) {
-        exclude group: 'io.confluent', module: 'kafka-schema-registry-client'
-        exclude group: 'io.confluent', module: 'kafka-avro-serializer'
-    }
-    implementation group: 'org.apache.beam', name: 'beam-runners-direct-java', version: dataflowBeamVersion
-    implementation group: 'org.apache.beam', name: 'beam-sdks-java-extensions-ml', version: dataflowBeamVersion
-    implementation group: 'org.apache.beam', name: 'beam-sdks-java-io-amazon-web-services', version: dataflowBeamVersion
-    implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '2.0.6'
-    implementation 'com.google.cloud:google-cloud-kms:2.15.0'
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation group: 'com.google.cloud', name: 'google-cloud-dlp', version: '3.16.0'
-    implementation 'com.google.api-client:google-api-client:2.2.0'
-    implementation group: 'com.google.apis', name: 'google-api-services-cloudkms', version: 'v1-rev108-1.25.0'
-    implementation group: 'org.apache.beam', name: 'beam-sdks-java-io-amazon-web-services', version: dataflowBeamVersion
-    implementation "com.google.auto.value:auto-value-annotations:1.10.1"
-    implementation 'com.google.cloud:google-cloud-storage:2.20.1'
-    annotationProcessor "com.google.auto.value:auto-value:1.10.1"
-    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
-    testImplementation group: 'org.apache.beam', name: 'beam-runners-direct-java', version: dataflowBeamVersion
-    testImplementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '2.0.6'
-    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-    testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
-    testImplementation 'junit:junit:4.12'
+// NOTE: We cannot use "compileOnly" or "shadow" configurations since then we could not run code
+// in the IDE or with "gradle run". We also cannot exclude transitive dependencies from the
+// shadowJar yet (see https://github.com/johnrengelman/shadow/issues/159).
+// -> Explicitly define the // libraries we want to be included in the "flinkShadowJar" configuration!
+configurations {
+    flinkShadowJar // dependencies which go into the shadowJar
+//    flinkShadowJar "org.apache.beam:beam-sdks-java-core:$beamVersion"
+//    flinkShadowJar "org.apache.beam:beam-runners-flink-1.16:$beamVersion"
+    // always exclude these (also from transitive dependencies) since they are provided by Flink
+    flinkShadowJar.exclude group: 'org.apache.flink', module: 'force-shading'
+    flinkShadowJar.exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    flinkShadowJar.exclude group: 'org.slf4j'
+    flinkShadowJar.exclude group: 'org.apache.logging.log4j'
 }
+
+// declare the dependencies for your production and test code
+dependencies {
+    // --------------------------------------------------------------
+    // Compile-time dependencies that should NOT be part of the
+    // shadow jar and are provided in the lib folder of Flink
+    // --------------------------------------------------------------
+    if (flinkVersionNew) {
+        implementation "org.apache.flink:flink-streaming-java:${flinkVersion}"
+        implementation "org.apache.flink:flink-clients:${flinkVersion}"
+    } else {
+        implementation "org.apache.flink:flink-streaming-java_${scalaBinaryVersion}:${flinkVersion}"
+        implementation "org.apache.flink:flink-clients_${scalaBinaryVersion}:${flinkVersion}"
+    }
+//    transformer implementation=
+//            "org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"
+//    implementation "org.apache.beam:beam-sdks-java-core:${beamVersion}"
+//    implementation "org.apache.beam:beam-runners-flink-1.16:${beamVersion}"
+    flinkShadowJar "org.apache.beam:beam-sdks-java-core:${beamVersion}"
+    flinkShadowJar "org.apache.beam:beam-runners-flink-1.16:${beamVersion}"
+    flinkShadowJar "org.apache.beam:beam-sdks-java-io-google-cloud-platform:${beamVersion}"
+    flinkShadowJar "com.google.cloud:google-cloud-storage:2.20.1"
+    flinkShadowJar "com.google.cloud:google-cloud-dlp:3.16.0"
+    implementation "com.google.auto.value:auto-value-annotations:1.10.1"
+    annotationProcessor "com.google.auto.value:auto-value:1.10.1"
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.3.0'
+    flinkShadowJar group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
+//    flinkShadowJar group: 'org.apache.beam', name: 'beam-sdks-java-core', version: beamVersion
+//    flinkShadowJar group: 'org.apache.beam', name: 'beam-runners-flink-1.16', version: beamVersion
+
+    // --------------------------------------------------------------
+    // Dependencies that should be part of the shadow jar, e.g.
+    // connectors. These must be in the flinkShadowJar configuration!
+    // --------------------------------------------------------------
+    //flinkShadowJar "org.apache.flink:flink-connector-kafka:${flinkVersion}"
+
+    runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
+    runtimeOnly "org.apache.logging.log4j:log4j-api:${log4jVersion}"
+    runtimeOnly "org.apache.logging.log4j:log4j-core:${log4jVersion}"
+
+    // Add test dependencies here.
+    // testCompile "junit:junit:4.12"
+    testImplementation "org.apache.beam:beam-runners-direct-java:$beamVersion"
+}
+
+// make compileOnly dependencies available for tests:
+sourceSets {
+    main.compileClasspath += configurations.flinkShadowJar
+    main.runtimeClasspath += configurations.flinkShadowJar
+
+    test.compileClasspath += configurations.flinkShadowJar
+    test.runtimeClasspath += configurations.flinkShadowJar
+
+    javadoc.classpath += configurations.flinkShadowJar
+}
+
+run.classpath = sourceSets.main.runtimeClasspath
+//run{
+//    classpath = sourceSets.main.runtimeClasspath
+//    jvmArgs '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED'
+//}
 
 jar {
     manifest {
-        attributes('Main-Class': mainClassName)
+        attributes 'Built-By': System.getProperty('user.name'),
+                'Build-Jdk': System.getProperty('java.version')
     }
 }
 
-compileJava {
-    options.encoding = 'UTF-8'
-    // Add additional jvm arguments
-    options.compilerArgs.addAll(['-Xlint:all', '-Xlint:-serial', '-Xlint:-processing'])
-}
-
-// default tasks when you run ./gradlew
-defaultTasks 'clean', 'assemble', 'jar'
-// Google cloud dataflow requires the resource/main directory to exist
-task resources {
-    def resourcesDir = new File('build/resources/main')
-    resourcesDir.mkdirs()
-}
-
-run {
-    if (project.hasProperty('args')) {
-        args project.args.split('\\s')
-    }
-}
-
-test {
-    useJUnit()
-    testLogging {
-        events "passed", "skipped", "failed"
-        showStandardStreams = true
-        exceptionFormat "full"
-    }
-}
-
-sourceSets {
-    test {
-        java.srcDir file('src/test')
-    }
-}
-
-def enableSpotlessCheck = project.hasProperty('enableSpotlessCheck') && project.enableSpotlessCheck == 'true'
-spotless {
-    enforceCheck enableSpotlessCheck
-    java {
-        licenseHeader javaLicenseHeader
-        googleJavaFormat()
-    }
-}
-run.mustRunAfter 'resources'
-run.mustRunAfter 'resources'
-task fatJar(type: Jar) {
+shadowJar {
+    configurations = [project.configurations.flinkShadowJar]
+    zip64=true
+    mergeServiceFiles()
     manifest {
-        attributes 'Implementation-Title': 'dlp-demo-tool',
-                'Implementation-Version': version,
-                'Main-Class': mainClassName
+        attributes 'Main-Class': mainClassName
     }
-    archiveFileName = project.name + '-all'
-    from {
-        configurations.compile.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-    with jar
 }
